# CVRP-PSO

./: .gitignore  CMakeLists.txt  PSO_data.xlsx  leitor_instancia.py  pso.config.txt  pso_test.py  visualizar_solucao.py  vrp_pso
dados_teste/: CMT_corrigido.xlsx  CMT_setor.xlsx  Golden.xlsx  PSO_CMT_num_setor.xlsx  PSO_data_CMT.xlsx  PSO_data_CMT_setor.xlsx  PSO_data_P.xlsx  P_setor.xlsx
include/: Cidade.hpp  CommandLine.hpp  Grafico.hpp  LocalSearch.h  PSO.hpp  Particle.hpp  Scanner.hpp  Solucao.hpp  util.hpp
instances/B/: B-n45-k5.txt
instances/F/: F-n45-k4.txt
resultado/: CMT11_best_nPart-25_nRep-5000_elt-0.csv  CMT11_best_nPart-25_nRep-5000_elt-0_setor.csv  CMT11_best_nPart-25_nRep-5000_elt-12.csv  CMT11_best_nPart-25_nRep-5000_elt-12_setor.csv  CMT11_best_nPart-25_nRep-5000_elt-25.csv  CMT11_best_nPart-25_nRep-5000_elt-25_setor.csv  CMT11_best_nPart-25_nRep-5000_elt-5.csv  CMT11_best_nPart-25_nRep-5000_elt-5_setor.csv  CMT11_nPart-50_nRep-1000.csv  CMT11_nPart-50_nRep-2000.csv  CMT11_nPart-50_nRep-500.csv  CMT12_best_nPart-25_nRep-5000_elt-0.csv  CMT12_best_nPart-25_nRep-5000_elt-0_setor.csv  CMT12_best_nPart-25_nRep-5000_elt-12.csv  CMT12_best_nPart-25_nRep-5000_elt-12_setor.csv  CMT12_best_nPart-25_nRep-5000_elt-25.csv  CMT12_best_nPart-25_nRep-5000_elt-25_setor.csv  CMT12_best_nPart-25_nRep-5000_elt-5.csv  CMT12_best_nPart-25_nRep-5000_elt-5_setor.csv  CMT12_nPart-50_nRep-1000.csv  CMT12_nPart-50_nRep-2000.csv  CMT12_nPart-50_nRep-500.csv  CMT1_best_nPart-25_nRep-5000_elt-0.csv  CMT1_best_nPart-25_nRep-5000_elt-0_setor.csv  CMT1_best_nPart-25_nRep-5000_elt-12.csv  CMT1_best_nPart-25_nRep-5000_elt-12_setor.csv  CMT1_best_nPart-25_nRep-5000_elt-25.csv  CMT1_best_nPart-25_nRep-5000_elt-25_setor.csv  CMT1_best_nPart-25_nRep-5000_elt-5.csv  CMT1_best_nPart-25_nRep-5000_elt-5_setor.csv  CMT1_nPart-50_nRep-1000.csv  CMT1_nPart-50_nRep-2000.csv  CMT1_nPart-50_nRep-500.csv  CMT2_best_nPart-25_nRep-5000_elt-0.csv  CMT2_best_nPart-25_nRep-5000_elt-0_setor.csv  CMT2_best_nPart-25_nRep-5000_elt-12.csv  CMT2_best_nPart-25_nRep-5000_elt-12_setor.csv  CMT2_best_nPart-25_nRep-5000_elt-25.csv  CMT2_best_nPart-25_nRep-5000_elt-25_setor.csv  CMT2_best_nPart-25_nRep-5000_elt-5.csv  (+130 more)
resultados/: CMT1_nPart-10_nRep-100.csv  CMT2_nPart-10_nRep-100.csv  CMT2_nPart-10_nRep-1000.csv  PSO_data.xlsx
scripts/: comparar_solucao.py  kd_tree.py  profiling.py  runtime_test.py  solution_viewer.py  test_kd_tree.py
src/: CMakeLists.txt  CMakePresets.json  Cidade.cpp  Grafico.cpp  LocalSearch.cpp  PSO.cpp  Particle.cpp  Scanner.cpp  Solucao.cpp  main.cpp  util.cpp
src/app/: CMakeLists.txt
src/app/app/: command-line.hpp  main.cpp
src/libcvrp-core/libcvrp/core/: CircleSector.hpp  Client.hpp  Instance.hpp  Route.hpp  constants.hpp
src/libcvrp-engine/: CMakeLists.txt
src/libcvrp-engine/libcvrp/engine/: geometry.cpp  geometry.hpp  io.cpp  io.hpp  io.test.cpp  local-search.cpp  local-search.hpp  local-search.test.cpp  splitter.cpp  splitter.test.cpp
src/libpso-core/: CMakeLists.txt
src/libpso-core/libpso/core/: Particle.hpp  Velocity.hpp
src/libpso-engine/: CMakeLists.txt
src/libpso-engine/libpso/engine/: pso-runner.cpp  pso-runner.hpp  pso-runner.test.cpp
src/libpso-engine/libpso/engine/io/: OutputWriter.hpp
src/libpso-engine/libpso/engine/particle/: initializer.test.cpp  updater.cpp  updater.hpp  updater.test.cpp
src_new/: CMakeLists.txt  CMakePresets.json
src_new/app/: CMakeLists.txt
src_new/app/app/: command-line.cpp  command-line.hpp  command-line.test.cpp  main.cpp
src_new/libcvrp-core/: CMakeLists.txt
src_new/libcvrp-core/libcvrp/core/: Client.hpp  Instance.hpp  Route.hpp
src_new/libcvrp-engine/: CMakeLists.txt
src_new/libcvrp-engine/libcvrp/engine/: io.cpp  io.hpp  local-search.cpp  local-search.hpp  local-search.test.cpp  splitter.cpp  splitter.hpp
src_new/libcvrp-engine/libcvrp/engine/io/: instance-reader.cpp  instance-reader.test.cpp
src_new/libpso-core/: CMakeLists.txt
src_new/libpso-core/libpso/core/: Hyperparameters.hpp
src_new/libpso-engine/: CMakeLists.txt
src_new/libpso-engine/libpso/engine/: pso-runner.cpp  pso-runner.test.cpp
src_new/libpso-engine/libpso/engine/io/: OutputWriter.cpp  config-reader.cpp  config-reader.hpp
src_new/libpso-engine/libpso/engine/particle/: initializer.cpp  initializer.hpp  initializer.test.cpp  updater.cpp
test/: B-n63-k10.txt  cidades.txt  pso.config.txt
